force-app/main/default/objects/Apttus_QPConfig__ProposalAdjustmentLineItem__c/fields/Formatted_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_End_Date__c</fullName>
    <label>Formatted End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>