force-app/main/default/objects/Apttus_QPConfig__ProposalAdjustmentLineItem__c/fields/Incentive_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Adjustment__c</fullName>
    <formula>Apttus_QPConfig__IncentiveAdjustmentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>