force-app/main/default/objects/Apttus_QPConfig__ProposalAdjustmentLineItem__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <formula>Apttus_QPConfig__LineItemId__r.Net_Price_2_decimals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>