force-app/main/default/objects/Apttus_QPConfig__ProposalAdjustmentLineItem__c/fields/Non_Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Discounted_Price__c</fullName>
    <formula>Apttus_QPConfig__LineItemId__r.Non_Discounted_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>