force-app/main/default/objects/Apttus_QPConfig__ProposalAdjustmentLineItem__c/fields/ProductNameTranslation__c.field-meta.xml
<CustomField>
    <fullName>ProductNameTranslation__c</fullName>
    <formula>Apttus_QPConfig__LineItemId__r.ProductNameTranslation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name Translation</label>
    <type>Text</type>
</CustomField>