force-app/main/default/objects/Apttus_QPConfig__ProposalAdjustmentLineItem__c/fields/Proposal_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Line_Number__c</fullName>
    <formula>Apttus_QPConfig__LineItemId__r.Apttus_QPConfig__LineNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>