force-app/main/default/objects/Apttus_QPConfig__ProposalAdjustmentLineItem__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Proposal Adjustment Line Items</relationshipLabel>
    <relationshipName>Proposal_Adjustment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>